--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: decryptSound
 Title: An extensible API for breaking captchas
 Version: 0.2.1.9000
-Authors@R: c(person("Thiago", "Nato", role = c("aut")))
+Authors@R: c(person("Thiago", "Nato", email="nato.tns@gmail.com", role = c("aut")))
 Description: Test
 Depends: R (>= 3.4.0)
 License: GPL-3 | file LICENSE
