--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,11 @@
 Package: decryptSound
 Title: An extensible API for breaking captchas
 Version: 0.2.1.9000
-Authors@R: c(person("Lucas", "Collina", role = c("aut")),
-  person("Thiago", "Nato", email = "nato.tns@gmail.com", role = c("aut", "cre")))
+Authors@R: c(person("Joe", "Developer", role = c("aut", "cre"),
+                     email = "nato.tns@gmail.com"),
+              person("Pat", "Developer", role = "aut"),
+              person("A.", "User", role = "ctb",
+                     email = "A.User@whereever.net"))
 Description: Test
 Depends: R (>= 3.4.0)
 License: GPL-3 | file LICENSE
