--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Title: An extensible API for breaking captchas
 Version: 0.2.1.9000
 Authors@R: c(person("Thiago", "Nato", role = c("aut", "cre"),
                      email = "nato.tns@gmail.com"),
+              person("Pat", "Developer", role = "aut"),
               person("Lucas", "Collina", role = "ctb",
                      email = "lucascollina@gmail.com"))
 Description: Test
