--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,5 @@
 Package: decryptSound
+Type: Package
 Title: An extensible API for breaking captchas
 Version: 0.2.1.9000
 Authors@R: c(person("Thiago", "Nato", role = c("aut", "cre"),
@@ -6,6 +7,7 @@ Authors@R: c(person("Thiago", "Nato", role = c("aut", "cre"),
               person("Pat", "Developer", role = "aut"),
               person("Lucas", "Collina", role = "ctb",
                      email = "lucascollina@gmail.com"))
+Maintainer: The package maintainer <yourself@somewhere.net>
 Description: Test
 Depends: R (>= 3.4.0)
 License: GPL-3 | file LICENSE
